static/style.css
/* ... */
.navigation,
.logout_button {
  line-height: 200%;
}

.navigation img,
.logout_button img {
  margin-right: 0.5em;
  vertical-align: middle;
}

.navigation a,
.logout_button a {
  padding: 1ex;
}

form.unit_selector {
  display: inline;
}

.logout_button {
  float: right;
}

.searchbox {
  margin: 0;
  padding: 0.1ex 1em 0ex 1em;
  float: right;
  line-height: 250%;
}

.searchbox form {
  float: left;
  margin: 0px;
}

.searchbox div {
  display: inline;
}

.searchbox select {
  margin-left: 0.3em;
  margin-right: 0.4em;
  font-size: 100%;
  width: 8em;
}

.searchbox input[type=text] {
  width: 8em;
  padding: 0.25ex 0.25em 0.25ex 0.25em;
  margin-right: 0.5em;
  font-size: 100%;
}

.searchbox input[type=submit] {
  font-size: 100%;
}

/*************************************************************************
 * Title of current page including path and actions
 */

.title,
.title2,
.actions {
  background-color: #f2f2f2;
  margin-left: 10px;
  margin-right: 10px;
}

.initiative_head .actions {
  box-shadow: none;
  -moz-box-shadow: none;
  -webkit-box-shadow: none;
}

.actions {
  border-radius: 0 0 8px 8px;
}

.initiative_head .actions {
  background-color: #fff;
  margin: 0px;
}

.slot_initiatives_list {
  margin-top: 1ex;
  margin-left: 10px;
  margin-right: 10px;
  background-color: #fcfcfc;
  border-radius: 8px;
  clear: left;
  border: 1px solid #ddd;
  padding-top: 1ex;
  padding-bottom: 1ex;
}

.title {
  box-shadow: inset #888 0px 5px 6px -5px;
  -moz-box-shadow: inset #888 0px 5px 6px -5px;;
  -webkit-box-shadow: inset #888 0px 5px 6px -5px;;
}

.title {
  color: #000;
  padding: 1.5ex 1em 0 1em;
}

.title div {
  font-size: 125%;
  line-height: 110%;
}

.title a {
  color: #000;
}

.title .member_image {
  margin-right: 0.7em;
  vertical-align: middle;
  border-radius: 7px;
}

.slot_title2 {
  padding: 1ex 1em 0 1em;
}

.member_list .member_image_avatar {
  float: left;
  margin-right: 0.5em;
}

.micro_avatar {
  width: 24px;
  height: 24px;
  border-radius: 4px;
  vertical-align: middle;
}

.actions {
  font-size: 75%;
  line-height: 220%;
  padding-top: 2ex;
  padding-bottom: 1ex;
}

.interest {
  margin-left: 1.33em;
  margin-bottom: 1.33ex;
}

.slot_actions .interest {
  margin-left: 0em;
}

.actions a {
  margin-right: 1em;
  border-radius: 5px;
  padding-right: 0.3em;
}

.slot_initiative_head  {
  padding-left: 10px;
  padding-top: 2ex;
}

.initiative_name {
  font-weight: bold;
  font-size: 125%;
}
.actions a {
  float: left;
}

.actions a:hover {
  background-color: #d7d7d7;
}

.actions img {
  padding-left: 0.2em;
  padding-right: 0.2em;
  vertical-align: middle;
}

.logo { 
  float: right;
  margin-right: 1em;
}


.member_image_photo {
  border-radius: 8px;
}

/*************************************************************************
 * vote info / delegation 
 */

.interest,
.slot_support,
.delegation {
  float: left;
  position: relative;
  z-index: 1;
}

.interest img,
.slot_support img,
.delegation img {
  padding-left: 0.2em;
  padding-right: 0.2em;
}
.actions .supporter,
.actions .potential_supporter,
.vote_info .head {
  float: left;
  margin-right: 1em;
}

.actions .supporter,
.actions .potential_supporter,
.actions .interest .head {
  padding-right: 0.3em;
}

.delegation .head_active,
.interest .head_active,
.actions .supporter,
.actions .potential_supporter {
  border-radius: 5px;
  border: 1px solid #5f6675;
}

.delegation .head_active,
.interest .head_active {
  background-color: #cdf;
}

.actions .supporter {
  background-color: #cdf;
}

.actions .potential_supporter {
  background-color: #cdf;
}

.slot_support .head_initiator {
  background-color: #f2f2f2;
  border-radius: 5px;
}

.delegation .change_delegation {
  margin-bottom: 2ex;
}

.delegation .change_delegation a {
  display: inline;
  float: none;
  padding: 1ex;
}

.delegation .delegation_participation {
  margin-left: 20.5em;
  margin-top: 3ex;
  font-style: italic;
  font-size: 80%;
}

.slot_actions .change_delegation {
  float: left;
}

.vote_info .close {
  position: absolute;
  top: 0;
  right: 0;
  padding: 1ex;
  display: block;
}

.vote_info .content {
  font-size: 133%;
  line-height: 100%;
  top: 2.8ex;
  display: none;
  position: absolute;
  z-index: 10;
  background-color: #cdf;
  border-radius: 0 5px 5px 5px;
  padding: 1em;
  width: 35em;
  border: 1px solid #5f6675;
  border-top: none;
}

.vote_info .delegation_arrow {
  margin-top: 1ex;
  margin-bottom: 1ex;
  vertical-align: middle;
}

.vote_info .delegation_arrow_overridden {
  opacity: 0.4;
}

.vote_info .delegation_scope_overridden {
  color: #777;
}

.vote_info .delegation_scope {
  display: inline;
}

.vote_info .delegation_info {
}

.vote_info a {
  padding-right: 0;
}

.vote_info .member_thumb {
  clear: left;
  background: #fff;
}

.delegation_overridden .member_thumb {
  opacity: 0.4;
}

.delegation .revoke {
  margin: 0.5ex;
  float: right;
}

.delegation .revoke img {
  vertical-align: middle;
}


/*************************************************************************
 * Main content
 */

.main {
  margin-left: 10px;
  margin-right: 10px;
}

/*************************************************************************
 * ui.tab
 */

.ui_tabs_links {
  margin-top: 3ex;
  margin-bottom: 1ex;
  font-size: 75%;
}

.ui_tabs_links a {
  padding: 1ex;
  line-height: 300%;
  background-color: #f2f2f2;
  white-space: nowrap;
  border-radius: 5px;
  margin-right: 5px;
  font-weight: bold;
}

.ui_tabs_links a:hover {
  background-color: #d7d7d7;
}

.ui_tabs_links a.selected {
  background-color: #444;
  color: #fff;
  text-decoration: none;
  padding: 1ex;
}

.ui_tabs_content {
  xborder: 1px solid #444;
  xpadding: 1ex 1ex 1ex 1ex;
}

.ui_tabs_links a.yellow {
  background-color: #fcc;
  color: #000;
}

.ui_tabs_links a.yellow:hover {
  background-color: #faa;
}

.ui_tabs_links a.yellow.selected {
  background-color: #a44;
  color: #fff;
  text-decoration: none;
  padding: 1ex;
}
/* ... */

